[tool.poetry]
name = "python-db"
version = "0.1.0"
description = "Transactional KV store written in Python to learn things"
authors = ["Rhys Davies <rhys.davies901@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
