[tool.poetry]
name = "rpdb"
version = "0.1.0"
description = "Transactional KV store written in Python to learn things"
authors = ["Rhys Davies <rhys.davies901@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sortedcontainers = "^2.4.0"
attrs = "^21.4.0"
betterproto = "^1.2.5"
Jinja2 = "^3.0.3"
protobuf = "^3.19.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.930"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
